package idleadventure.Objectes;

public class ObPal extends Objecte{



    public ObPal() {
        super.imatge = "🪈 ";
        super.nom = "Stick";
        super.quantitat = 1;
    }

    




    
}
