package idleadventure.Personatges;

public class PerMage extends Personatge {

    
    public PerMage() {
        super.imatge = "🧙";

        super.nom = "Mage";
        super.vida = 10;
        super.mana = 30;
        super.stamina = 50;

        super.str = 2;
        super.agi = 2;
        super.intel = 4;
        super.dex = 2;
        super.luck = 1;

    }
}
