package idleadventure.Personatges;

public class PerWarrior extends Personatge {

    
    public PerWarrior() {
        super.imatge = "👷";

        super.nom = "Warrior";
        super.vida = 20;
        super.mana = 0;
        super.stamina = 100;

        super.str = 5;
        super.agi = 2;
        super.intel = 1;
        super.dex = 0;
        super.luck = 1;

    }
}
