package idleadventure.Caselles;

import idleadventure.Utils.cursorMoves;

public class caPomers extends Casella{

    int quantitatFusta;
    int pomes;

    
    

    public caPomers(int[] position) {
        super.walkable = false;
        super.nom = "Pomers";
        super.imatge = "🌳";
        super.id = 11;
        this.quantitatFusta = 10;
        this.pomes = 2;
        super.position = position;
        
    }

    public int getQuantitatFusta() {
        return quantitatFusta;
    }

    public void setQuantitatFusta(int quantitatFusta) {
        this.quantitatFusta = quantitatFusta;
    }

    public int getPomes() {
        return pomes;
    }

    public void setPomes(int pomes) {
        this.pomes = pomes;
    }

    public void mostraPaisatge(int distancia,int groundPosition){
        switch (distancia) {
            case 1:
                
                break;
            case 2:
                cursorMoves.moveup(groundPosition+10);
                System.out.printf("""
                \033[34C\033[32m          ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                   ⠀⠀⠀⠀%1$s
                \033[34C   ⡴⠋⠓⠤⠾⣆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀            ⡴⠋⠓⠤⠾⣆⠀⠀⠀⠀⠀⠀%1$s
                \033[34C⣦⠔⢎⡀⠀⠀⠀⠘⠖⠋⠚⠦⡄⠴⠋⠙⣦⠔⠋⠓⠤⠖⠋⠚⠦⡄⢠⠴⠋⠙⣦⠔⢎⡀⠀⠀⠀⠘⠖⠋⠚⠦⡄⠀⠀%1$s
                \033[34C⠀⠀⠀⠀⠀⠀⠀⠀⢀⣐⡮⠹⠤⣀⢤⠀⠀⠀⠀⠀⠀⠀⢀⡤⠤⣀⣀⡹⠴⢤⠀⠀⠀⠀⠀⠀⠀⠀⢀⣐⡮⠹⠤⣀⢤%1$s
                \033[34C⠀⠀⢀⠀⢀⡔⠉⠉⠉⠉⠒⠁⠀⠀⠈⡑⠴⠋⠙⣦⢠⡞⠉⠀⠀⠀⠉⠓⠊⠉⠀⠀⢀⠀⢀⡔⠉⠉⠉⠉⠒⠁⠀⠀⠈%1$s
                \033[34C⡀⢛⡟⢴⣯⡀🍎⠀⠀⠀⠀⠀⠀⠀⠑⢻⠀⠀⠀⢹⡆⠀⠀⠀⠀⠀⠀⠤⣦⡀⢛⡟⢴⣯⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀%1$s
                \033[34C⡹⠼⣣⠠⢉⢹⠣⠦⡖⢀⠶⠀⠀⢠⣔⣖⡅⠦⢄⣀⠸⡄⢀⡀⠀⣄⠀🍎⢀⡹⠼⣣⠠⢉⢹⠣⠦⡖⢀⠶⠀⠀⢠⣔%1$s
                \033[34C⠀⡀⣬⠫⠂⡆⢀⢦⠇⡊⠽⡪⠁⠀⠀⠉⠀⠀⠀⢸⠀⠉⠉⠻⢾⣛⢊⠏⠀⡤⠀⡀⣬⠫⠂⡆⢀⢦🍎⠽⡪⠁⠀⠀%1$s
                \033[34C⠉⠀⠘⠖⠙⢇⢠⣤⠗⠒⠒⠃⠉⠁⠀⠀⠀⠀⠀⡸⠀⠀⣠⠶⠚⠈⠉⠀⢌⠆⠉⠀⠘⠖⠙⢇⢠⣤⠗⠒⠒⠃⠉⠁⠀%1$s
                \033[34C⠀⠀⠀⣀⡠⠊⠂⡇⢀⣀⠀🍎⠀⠀⢰⣖⡒⠃⠀⠀⠀⠸⣤⡄⠀⠀⠀⡀⠀⠀⠀⠀⣀⡠⠊⠂⡇⢀⣀⠀⠀⠀⠀⠀%1$s
                \033[34C⠀⢈⣫⠁\033[38;5;94m⠘⠀⠔⠉⠁\033[32m⢟⠀⠀⠀⠀⡤⠤⠴⠁⠀⠀⠀\033[38;5;94m⠔⠉⠁\033[32m⣳⠧⠤⠶⠷⠀⠀⢈⣫⠁\033[38;5;94m⠘⠀⠔⠉⠁\033[32m⢟⠀🍎⠀⡤%1$s
                \033[34C⠚⠛⠀\033[38;5;94m⠑⢆⠀⠰⠋⠉\033[32m⠈⠉⠓⠖⠉⠀⠀\033[38;5;94m⠈⠈⠑⢆⠀⠰⠋⠉⠁\033[32m⠀⠀⠀⠛⠓⠚⠛⠀\033[38;5;94m⠑⢆⠀⠰⠋⠉\033[32m⠈⠉⠓⠖⠉⠀%1$s
                \033[34C⠀⠀⠀⠀\033[38;5;94m⢸⠀⡇\033[32m ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\033[38;5;94m⢸⠀⡇\033[32m⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\033[38;5;94m⢸⠀⡇\033[32m ⠀⠀⠀⠀⠀⠀⠀%1$s
                \033[34C⠀⠀⠀⠀\033[38;5;94m⡜⠀⠘⠄\033[32m⠀⠀⠀⠀       \033[38;5;94m⡜⠀⠘⠄\033[32m⠀⠀⠀⠀ ⠀⠀⠀⠀⠀⠀\033[38;5;94m⡜⠀⠘⠄\033[32m⠀⠀⠀⠀   %1$s\033[0m
                ""","");
                break;
            case 3:
            cursorMoves.moveup(groundPosition);
            System.out.printf("""
                \033[34C\033[32m⣦⠔⢎⡀⠴⠋⠙⠘⠖⠋⠚⠦⡄⠴⠋⠙⣦⠔⠋⠓⠤⠖⠋⠚⠦⡄⢠⠴⠋⠙⣦⠔⢎⡀⠴⠋⠙⠘⠖⠋⠚⠦⡄⠀%1$s
                \033[34C⠀⠀⠀⠀⠀⠀⠀⠀⢀⣐⡮⠹⠤⣀⢤⠀⠀⠀⠀⠀⠀⠀⢀⡤⠤⣀⣀⡹⠴⢤⠀⠀⠀⠀⠀⠀⠀⠀⢀⣐⡮⠹⠤⣀⢤%1$s
                \033[34C⠀⠀⢀⠀⢀⡔⠉⠉⠉⠉⠒⠁⠀⠀⠈⡑⠴⠋⠙⣦⢠⡞⠉⠀⠀⠀⠉⠓⠊⠉🍎⢀⠀⢀⡔⠉⠉⠉⠉⠒⠁⠀⠀⠈%1$s
                \033[34C⠀⡀⣬⠫⠂⡆⢀⢦⠇⡊⠽⡪⠁⠀⠀⠉🍎⠀⢸⠀⠉⠉⠻⢾⣛⢊⠏⠀⡤⠀⡀⣬⠫⠂⡆⢀⢦⠇⡊⠽⡪⠁⠀⠀%1$s
                \033[34C⠉⠀⠘⠖⠙⢇⢠⣤⠗⠒⠒⠃⠉⠁⠀⠀⠀⠀⠀⡸⠀⠀⣠⠶⠚⠈⠉⠀⢌⠆⠉⠀⠘⠖⠙⢇⢠⣤⠗⠒⠒⠃⠉⠁⠀%1$s
                \033[34C🍎⠀⣀⡠⠊⠂⡇⢀⣀⠀⠀⠀⠀⠀⢰⣖⡒⠃⠀⠀⠀⠸⣤⡄⠀⠀⠀⡀⠀⠀⠀⠀⣀⡠⠊⠂⡇⢀⣀⠀⠀🍎⠀%1$s
                \033[34C⠀⢈⣫⠁\033[38;5;94m⠘⠀⠔⠉⠁\033[32m⢟⠀🍎⠀⡤⠤⠴⠁⠀⠀⠀\033[38;5;94m⠔⠉⠁\033[32m⣳⠧⠤⠶⠷⠀⠀⢈⣫⠁\033[38;5;94m⠘⠀⠔⠉⠁\033[32m⢟⠀⠀⠀⠀⡤%1$s
                \033[34C⠚⠛⠀\033[38;5;94m⠑⢆⠀⠰⠋⠉\033[32m⠈⠉⠓⠖⠉⠀⠀\033[38;5;94m⠈⠈⠑⢆⠀⠰⠋⠉⠁\033[32m⠀⠀⠀⠛⠓⠚⠛⠀\033[38;5;94m⠑⢆⠀⠰⠋⠉\033[32m⠈⠉⠓⠖⠉⠀%1$s
                \033[34C⠀⠀⠀⠀\033[38;5;94m⢸⠀⡇\033[32m ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\033[38;5;94m⢸⠀⡇\033[32m⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\033[38;5;94m⢸⠀⡇\033[32m ⠀⠀⠀⠀⠀⠀⠀%1$s
                \033[34C⠀⠀⠀⠀\033[38;5;94m⡜⠀⠘⠄\033[32m⠀⠀⠀⠀       \033[38;5;94m⡜⠀⠘⠄\033[32m⠀⠀⠀⠀ ⠀⠀⠀⠀⠀⠀\033[38;5;94m⡜⠀⠘⠄\033[32m⠀⠀⠀⠀   %1$s\033[0m
                ""","");
                break;
            case 4:
            
                break;
            default:
                throw new AssertionError();
        }

    }
    
    
}
