package idleadventure.Objectes;

public class ObBox extends Objecte{



    public ObBox() {
        super.imatge = "📦";
        super.nom = "Box";
        super.quantitat = 1;
    }

    




    
}
