package idleadventure.Objectes;

public class ObPen extends Objecte{



    public ObPen() {
        super.imatge = "🖊️ ";
        super.nom = "Pen";
        super.quantitat = 1;
    }

    




    
}
