package idleadventure.Objectes;

public abstract class Objecte {

    String imatge;
    String nom;
    int quantitat;

    
    public String getImatge() {
        return imatge;
    }
    public void setImatge(String imatge) {
        this.imatge = imatge;
    }
    public String getNom() {
        return nom;
    }
    public void setNom(String nom) {
        this.nom = nom;
    }
    public int getQuantitat() {
        return quantitat;
    }
    public void setQuantitat(int usos) {
        this.quantitat = usos;
    }
    
    
    




    
}
