package idleadventure.Personatges;

public class PerNinja extends Personatge {

    
    public PerNinja() {
        super.imatge = "🥷 ";

        super.nom = "Ninja";
        super.vida = 15;
        super.mana = 0;
        super.stamina = 70;

        super.str = 3;
        super.agi = 5;
        super.intel = 2;
        super.dex = 0;
        super.luck = 1;

    }
}
