package idleadventure.Personatges;

public class PerVampire extends Personatge {

    
    public PerVampire() {
        super.imatge = "🧛";

        super.nom = "Vampire";
        super.vida = 10;
        super.mana = 20;
        super.stamina = 100;

        super.str = 4;
        super.agi = 2;
        super.intel = 3;
        super.dex = 0;
        super.luck = 1;

    }
}
